# URL-Shortener

./: README.md  pyproject.toml
url_short/: admin.py  forms.py  models.py  urls.py  views.py
url_short/migrations/: 0001_initial.py  0002_alter_userusage_last_reset.py  0002_rename_short_url_url_short_code.py  0003_alter_url_created.py  0003_alter_userusage_last_reset.py  0004_alter_userusage_last_reset.py
url_short/templates/: home.html
url_short/templates/main/: home.html
url_short/templates/registration/: login.html  register.html
url_shortener/: settings.py  urls.py
