[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Sarthak5598 <sarthak5598sharma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
